--- a/probabilidad_U2_Programa1.ipynb
+++ b/probabilidad_U2_Programa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqWTV30+KyvFa4k2/cDyR8",
+      "authorship_tag": "ABX9TyP5iBrLJB5Iq+neNjokP2oM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "zR2bqwlhn1xU"
       },
@@ -62,7 +62,7 @@
         "id": "ty6TyqLRoTiw",
         "outputId": "7fbf324f-d9d3-47d5-f21b-a29735030bb9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "id": "slWHiUpPqQWQ",
         "outputId": "427e2672-a574-4c67-fc01-1a62c3273db2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,9 +117,9 @@
         "n = len(dado)\n",
         "r = 2\n",
         "\n",
-        "Cn = mt.factorial(n+r-1)/(mt.factorial(r) * mt.factorial((n+r-1)-r))\n",
+        "CnR = mt.factorial(n+r-1)/(mt.factorial(r) * mt.factorial((n+r-1)-r))\n",
         "\n",
-        "print(\"Existen\", Cn, \" posibles combinaciones sin repeticion del total de\", n,\n",
+        "print(\"Existen\", CnR, \" posibles combinaciones sin repeticion del total de\", n,\n",
         "      \"caracteres\", \"en grupos de \", r, \"en\", r)\n",
         "print(\"Aqui las combinaciones con repeticion de dos dados\")\n",
         "\n",
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoRl3KQ6rj2e",
-        "outputId": "2c750721-4b3a-4cd4-a187-b7a8dc5451c1"
+        "outputId": "6769f7b4-02c2-45be-e94c-457d378ac292"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
